[package]
name = "numquant"
version = "0.1.0"
edition = "2021"
description = "Quantize numbers to a smaller range to save bandwidth or memory data types and back again."
repository = "https://github.com/vilcans/numquant"
keywords = ["numeric", "quantization"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
